--- a/mlb-app/package.json
+++ b/mlb-app/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "csv-parser": "^3.2.0",
     "next": "15.1.6",
     "papaparse": "^5.5.2",
     "react": "^19.0.0",
