--- a/model/.gitignore
+++ b/model/.gitignore
@@ -3,3 +3,7 @@
 !currentdata.parquet
 !data_cleaner.py
 !__init__.py
+!masterdata.parquet
+!masterdata_features.txt
+!xgb_model.pkl
+!xgb_model_summary.txt
